--- a/markdown/20191108-1.md
+++ b/markdown/20191108-1.md
@@ -1,15 +1,10 @@
 ---
-Title: Cad2019 期中影片報告
+Title: Cad2019 期中報告影片
 Date: 2019-11-08 
 Category: Misc
-Tags: 2019FallCad
-Slug: embed video
+Tags: 2019FallCP
+Slug: 2019cad embed video
 Author: 40523113
-
-Cad2019 期中進度報告
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/E02IbI4DUNU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 ---
-Cad2019 期中進度報告
-
+Cad2019 期中報告影片
 <iframe width="560" height="315" src="https://www.youtube.com/embed/E02IbI4DUNU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
